# iot-cloud-data-roadmap

./: .gitignore  README.md  pyproject.toml
src/week04/day01/: ds_basics.py
tempkit.egg-info/: PKG-INFO  SOURCES.txt
tests/week04/: test_day01_ds_basics.py
week01/: basics.py  c_to_f_func.py  csv_manual.py  csv_pandas.py  currency_converter.py  data.csv  data_copy.csv  example.txt  fibonacci.py  grade_average.py  multiplication_table.py  read_write_file.py  simple_calculator.py  temp_classifier.py
week02/: break_continue.py  control_flow_exercises.py  for_loop.py  if_statement.py  list_basic_1_declare_access.py  operators.py  variables_and_types.py  while_loop.py
week03/day01/: demo.py
week03/day01/src/: utils_math.py
week03/day02/: main.py
week03/day02/src/: analytics.py  utils_math.py
week03/day02/tests/: test_analytics.py  test_utils_math.py
week03/day03/: .coverage  pytest.ini
week03/day03/tests/: test_analytics_adv.py  test_utils_math_adv.py
week03/day04/tempkit/: __init__.py  analytics.py  cli.py  utils_math.py
week03/day04/tests/: conftest.py  test_cli.py
